--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -9,6 +9,7 @@ rule diamond:
         "{sample}.fa"
     output:
         "{sample}.blastout"
+    threads:100
     shell:
         "diamond blastp -d /home/brewerlab/nr_database/diamond_db.dmnd -q {input} -o {output} -p {threads}   -f 6 sseqid sseq qseqid qseq  -k 1000 --unal 1"
 # rule blast2fa:
