--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -14,16 +14,16 @@ rule final:
 
 rule diamond:
     input:
-        "{sample}.fa"
+        expand("{sample}.fa",sample=SAMPLES)
     output:
-        "{sample}.blastout"
+        expand("{sample}.blastout",sample=SAMPLES)
     threads:100
     shell:
         "diamond blastp -d /home/brewerlab/nr_database/diamond_db.dmnd -q {input} -o {output} -p {threads}   -f 6 sseqid sseq qseqid qseq  -k 1000 --unal 1"
 rule blast2fa:
     input:
-        "{sample}.blastout",
-        "{sample}.fa"
+        expand("{sample}.blastout",sample=SAMPLES)
+        expand("{sample}.fa",sample=SAMPLES)
     output:
         dynamic("{header}.fasta")
     run:
