--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -22,7 +22,7 @@ rule diamond:
         "diamond blastp -d /home/brewerlab/nr_database/diamond_db.dmnd -q {input} -o {output} -p {threads}   -f 6 sseqid sseq qseqid qseq  -k 1000 --unal 1"
 rule blast2fa:
     input:
-        expand("{sample}.blastout",sample=SAMPLES)
+        expand("{sample}.blastout",sample=SAMPLES),
         expand("{sample}.fa",sample=SAMPLES)
     output:
         dynamic("{header}.fasta")
