--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -1,3 +1,5 @@
+from itertools import groupby
+
 def fasta_iter(fasta_name):
     fh = open(fasta_name)
     faiter = (x[1] for x in groupby(fh, lambda line: line[0] == ">"))
