--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -29,6 +29,7 @@ rule blast2fa:
     output:
         dynamic("{header}.fasta")
     run:
+
         qdict = {}
         for ff in fasta_iter(input[1]):
             headerStr, seq = ff
@@ -41,7 +42,7 @@ rule blast2fa:
 
 
                 row = line.split()
-                with open(output[0],"a") as out:
+                with open(row[2].replace("|","_")+".fasta","a") as out:
                     out.write(">"+row[2]+"\n")
                     out.write(qdict[row[2]]+"\n")
                     out.write(">"+row[0]+"\n")
