--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -37,14 +37,14 @@ rule diamond:
     input:
         expand("{sample}.fa",sample=SAMPLES)
     output:
-        expand("pssm_dir/{sample}.blastout",sample=SAMPLES)
+        expand("{sample}.blastout",sample=SAMPLES)
     threads:100
     shell:
         "diamond blastp -d /home/brewerlab/nr_database/diamond_db.dmnd -q {input} -o {output} -p {threads}   -f 6 sseqid sseq qseqid qseq  -k 1000 --unal 1"
 
 rule blast2fa:
     input:
-        expand("pssm_dir/{sample}.blastout",sample=SAMPLES),
+        expand("{sample}.blastout",sample=SAMPLES),
         expand("{sample}.fa",sample=SAMPLES)
     output:
         dynamic("pssm_dir/alignments/{header}.fasta")
