--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -62,7 +62,7 @@ rule blast2fa:
 
 
                 row = line.split()
-                with open(row[2].replace("|","_")+".fasta","a") as out:
+                with open("pssm_dir/"row[2].replace("|","_")+".fasta","a") as out:
                     if row[2] not in used_dict:
                         used_dict[row[2]] = True
                         out.write(">"+row[2]+"\n")
@@ -262,6 +262,7 @@ rule seq2png:
         "sequences/{header}.seq"
     output:
         "seq_pics/{header}.png"
+    conda: "envs/pil.yaml"
     run:
         import PIL.ImageDraw as ImageDraw,PIL.Image as Image, PIL.ImageShow as ImageShow
         scale_factor = 360/20
