--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -130,6 +130,7 @@ rule align2pssm:
                                         sseq[seq[num]][num] = 1
                                 except:
                                     0
+            print(qseq)
 
             # print("\t", end="")
             line2write +="\t"
