--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -110,7 +110,7 @@ rule align2pssm:
 
         }
         print(output[0],input)
-        with open(output[0]) as out:
+        with open(output[0],"w") as out:
             for ff in fasta_iter(input):
                 headerStr, seq = ff
                 if line1:
