--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -251,7 +251,7 @@ rule pssm2mat:
                         except:
                             # print("na"+str(q_j)+" ",end="")
                             # print("0 ",end="")
-                            line2write+="0,"
+                            line2write+="NA,"
                 # print(line2write[:-1])
                 out.write(line2write[:-1]+"\n")
                 # print("\n\n\n\n\n\n\n")
