--- a/create_features/Snakefile
+++ b/create_features/Snakefile
@@ -307,7 +307,7 @@ rule seq2png:
         midpoint = num/2
 
         # sequence_iterator = fasta_iter(sys.argv[1])
-        sequence_iterator = fasta_iter(input)
+        sequence_iterator = fasta_iter(input[0])
         for ff in sequence_iterator:
             image = Image.new('RGB', (num, num), 'white')
             draw = ImageDraw.Draw(image)
